force-app/main/default/objects/Topic__c/Topic__c.object-meta.xml
<CustomObject>
    <description>Object for customizable tagging mechanism in Salesforce. Enables users to associate Topics with object records to track a particular issue, theme, or subject across objects. Also gives Administrators ability to manage and customize Topics directly.</description>
    <label>Topic</label>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>