force-app/main/default/objects/Topic__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(
OR(
ISBLANK(Start_Date__c),
TODAY() &gt;= Start_Date__c
),
OR(
ISBLANK(End_Date__c),
TODAY() &lt;= End_Date__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>