force-app/main/default/objects/Topic__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Games</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>