force-app/main/default/objects/Topic__c/fields/Object_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Object_Visibility__c</fullName>
    <label>Object Visibility</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>