force-app/main/default/objects/Topic__c/fields/Records_with_Topic__c.field-meta.xml
<CustomField>
    <fullName>Records_with_Topic__c</fullName>
    <label>Records with Topic</label>
    <summaryForeignKey>Topic_Junction__c.Topic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>